# continual-pretrain

./: .gitignore  README.md  pyproject.toml
configs/deepspeed/: ds_config_zero2.json  ds_config_zero3.json
configs/train_configs/: train_base.yaml
src/: train_deepspeed.py
